--- a/build.gradle
+++ b/build.gradle
@@ -2,28 +2,33 @@ plugins {
     id 'java'
 }
 
-group = 'com.example'
-version = '1.0-SNAPSHOT'
+group 'io.github.ganggreentempertatum'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-}
-
-dependencies {
-    implementation 'net.portswigger.burp.extensions:montoya-api:2023.12.1'
-}
-
-jar {
-    // Exclude signature files from the final JAR
-    exclude "**/*.SF"
-    exclude "**/*.DSA"
-    exclude "**/*.RSA"
-    
-    // If you want all dependencies included in the final JAR (fat JAR)
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    maven {
+        url "https://maven.portswigger.net/repository/public/"
     }
 }
 
-sourceCompatibility = '17'
-targetCompatibility = '17'
+dependencies {
+    implementation 'net.portswigger.burp.extensions:montoya-api:+'
+}
+
+sourceSets {
+    main {
+        java {
+            srcDir 'src'
+        }
+    }
+}
+
+java {
+    sourceCompatibility = '17'
+    targetCompatibility = '17'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
