fix: test hanged response() to getResponse()

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ java {
     targetCompatibility = '17'
 }
 
+jar {
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
